# book-planner

./: .dockerignore  .gitignore  Cargo.toml  Justfile  README.md  Tiltfile  test.yaml
.scratch/: kubeconfig
deploy/app/templates/: service.yaml
deploy/infra/: Chart.yaml
deploy/operator/: Chart.yaml  values.yaml
deploy/operator/templates/: deployment.yaml  role.yaml  rolebinding.yaml
docker/: rust.Dockerfile  wasm.Dockerfile
src/cmd/auth/get-login/: Justfile  Tiltfile  main.rs
src/cmd/draughts/: get-games.rs
src/cmd/draughts/get-games/: main.rs
src/containers/: Cargo.toml
src/containers/db-operator/: main.rs  values.yaml
src/containers/db-operator/deployment/: mod.rs  monitor.rs
src/macros/: server.rs
src/rust/: Cargo.toml
src/tools/: Cargo.toml  copy-wasms.js
src/tools/cmd/: copy-wasms.rs
src/wasm/: Cargo.toml
src/wasm/cmd/auth/: get-login.rs
src/wasm/cmd/draughts/: get-games.rs
