[package]
name = "book_planner_containers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db_operator"
path = "db-operator/main.rs"

[dependencies]
kube = { version = "0.80.0", default-features = false, features = ["client", "rustls-tls", "runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
tokio = "1.14.0"
