[package]
name = "book_planner_wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-get-login"
path = "cmd/auth/get-login.rs"

[[bin]]
name = "draughts-get-games"
path = "cmd/draughts/get-games.rs"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1.25.1", features = ["io-util", "fs", "net", "time", "rt", "macros", "signal"] }
